--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro Documento</title>
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
     
-    <h1>Ola Mundo</h1>
+<!--     <h1>Ola Mundo</h1>
     <h2>continuando</h2>
+    <h3>Exercitando os Titulos</h3> -->
 
-    
+    <div>
+
+        <header>
+            <h1>PÁGINA INICIAL</h1>
+            <nav>
+                <ul>
+                    <li>Java</li>
+                    <li>Javascript</li>
+                    <li>Python</li>
+                    <li>C#</li>
+                </ul>
+
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div>
+            <section>
+                <p class="homeText">
+                    Lorem, <span>ipsum</span> dolor sit amet consectetur adipisicing elit. Quod cum sit libero doloremque alias delectus iure praesentium aperiam architecto possimus. Voluptates tempora pariatur odio cum animi alias sequi officia illo?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sunt debitis a esse ducimus! Accusamus assumenda quos deleniti voluptatibus ea, consectetur sapiente cumque repudiandae ex itaque soluta quasi perspiciatis blanditiis.
+                </p>
+            </section>
+        </div>
+
+        <footer>
+            <div>
+                <small class="copyright">
+                    <p><span>SEM</span> Copyright&copy, pode copiar - 2023</p>
+                </small>
+            </div>
+        </footer>
+    </div>
 
 </body>
 </html>
